--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "react-slideshow-image": "^4.0.5",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1",
+    "source-map-explorer": "^2.5.2",
     "styled-components": "^5.3.5",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "analyze": "source-map-explorer 'docs/static/js/*.js'",
     "predeploy": "npm run build",
     "deploy": "gh-pages -b main -d build",
     "start": "react-scripts start",
@@ -48,6 +51,7 @@
     "@types/node": "^16.11.47",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
+    "@types/react-slick": "^0.23.10",
     "@types/styled-components": "^5.1.25",
     "prettier": "2.7.1"
   }
